tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__KillAlltheThings-AAAAAAAAAAAAAAAAAAAAJQ==__TimetoKillSkelet-AAAAAAAAAAAAAAAAAAADkA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 912,
  "prerequisites": [
    11
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Arrows are nice, if you shoot them. If one hits you, well, bad things happen.\n\nHint: Arrows are an excellent source of telum.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Time to Kill (Skeleton)",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": 432000,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    11
  ],
  "rewards": [],
  "tasks": []
}
